tests/paczka2/big_fuzzy/72998291.err
Error in line 3: ss4 A163 8,8
Error in line 4: ss4 S618 97,5
Error in line 11: YWMseHJl A163 35,31
Error in line 8: s8wbcX A163 9,4
Error in line 14: s8wbcX A504 17,5
Error in line 12: YWMseHJl A163 110,2
Error in line 28: Jyw2G1AxkSO S607 57,7
Error in line 35: EWQqPpvW S618 68,8
Error in line 34: s8wbcX S618 38,2
Error in line 66: ss4 A504 46,3
Error in line 38: S618 A163 7,7
Error in line 73: S618 S618 73,1
Error in line 83: YWMseHJl S618 11,5
Error in line 89: s8wbcX A163 56,6
Error in line 84: YWMseHJl A504 54,8
Error in line 92: Jyw2G1AxkSO S618 79,5
Error in line 95: Jyw2G1AxkSO A163 26,3
Error in line 111: YWMseHJl A163 -6,9
Error in line 106: ss4 A504 53,5
Error in line 116: Jyw2G1AxkSO A163 26,5
Error in line 107: EWQqPpvW A163 85,9
Error in line 129: qf4QtGw5 S607 69,6
Error in line 93: YWMseHJl S607 22,4
Error in line 139: qf4QtGw5 A163 66,5
Error in line 143: Jyw2GhAxkSO Ah63 82,8
Error in line 153: EWQqPpvW A163 96,2
Error in line 171: ss4`S618`39,7
Error in line 178: Jyw2G1AxkSO A504 212,5
Error in line 187: ss4 A163 97,2
Error in line 189: s8wbcX A504 8,2
Error in line 207: ss4 S607 -1,6
Error in line 205: Jyw2G1AxkSO S618 34,3
Error in line 236: Jyw2G1AxkSO A163 93,4
Error in line 238: Jyw2G1AxkSO S618 86,4
Error in line 239: Jyw2G1AxkSO A163 83,6
Error in line 232: s8wbcX S607 7,0
